@@ -4,14 +4,16 @@ package responders;
 import com.sedmelluq.discord.lavaplayer.track.AudioTrack;
 import music.SongPlayer;
 import net.dv8tion.jda.api.entities.Message;
+import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.entities.channel.concrete.VoiceChannel;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import net.dv8tion.jda.api.managers.AudioManager;
 import org.jetbrains.annotations.NotNull;
-import java.net.URI;
-import java.net.URISyntaxException;
+
+
+import java.net.URL;
 import java.util.List;
 import java.util.Random;
 
@@ -23,6 +25,8 @@ public class PongListener extends ListenerAdapter {
     @Override
     public void onMessageReceived(MessageReceivedEvent event)
     {
+
+
         if (event.getAuthor().isBot()) return;
 
         Message message = event.getMessage();
@@ -30,55 +34,128 @@ public class PongListener extends ListenerAdapter {
 
         String [] wordArgs = content.split(" ");
 
-        if(wordArgs[0].equals("!play")){
 
 
-            if(wordArgs.length < 2 ){
+        switch (wordArgs[0]){
 
-                event.getChannel().sendMessage("Incorrect usage!!\n Ex: '!play <name of song and artist>'").queue();
+            case "!play":
+
+
+                if(wordArgs.length < 2 ){
+
+                    event.getChannel().sendMessage("Incorrect usage!!\n Ex: '!play <name of song and artist>'").queue();
 
 
 
-            }else {
+                }else if(!event.getMember().getVoiceState().inAudioChannel()){
 
+
+                    event.getChannel().sendMessage("Must be in the music voice channel to listen to and issue music commands").queue();
+                }
+
+                else {
+
+                    final AudioManager audioManager = event.getGuild().getAudioManager();
+                    final VoiceChannel voiceChannel = (VoiceChannel) event.getMember().getVoiceState().getChannel();
+
+
+                    audioManager.openAudioConnection(voiceChannel);
+
+
+                    String link = "";
+
+                    for(int i = 1; i < wordArgs.length; ++i){
+
+                        link += wordArgs[i] + " ";
+
+
+
+                    }
+
+                    if (!isURL(link)){
+
+                        link = "ytsearch:" + link + " audio";
+                    }
+
+
+                    List<TextChannel> musicCmdChannels = event.getGuild().getTextChannelsByName("music-commands", true);
+
+
+                    if(musicCmdChannels.size() != 1){
+
+
+                        event.getChannel().sendMessage("Commands for music must come from a single channel called '#music-commands'").queue();
+                    }else {
+
+
+
+                        SongPlayer.getInstance().playSong(musicCmdChannels.get(0));
+                        SongPlayer.getInstance().loadToPlay(musicCmdChannels.get(0), link, isURL(link));
+                    }
+
+                }
+            break;
+
+
+            case "!track":
+                if(wordArgs.length == 2 ){
+
+                    if(isNumeric(wordArgs[1])){
+
+
+                        if(SongPlayer.getInstance().getMusicManager(event.getGuild()).trackSongSchedule.playList.size() > Integer.parseInt(wordArgs[1])){
+
+
+
+                            SongPlayer.getInstance().getMusicManager(event.getGuild()).trackSongSchedule.playNextTrack(Integer.parseInt(wordArgs[1]));
+                            List<TextChannel> musicCmdChannels = event.getGuild().getTextChannelsByName("music-commands", true);
+                            AudioTrack currentTrack = SongPlayer.getInstance().getCurrentTrack(musicCmdChannels.get(0));
+
+                            if(currentTrack != null){
+
+
+                                event.getChannel().sendMessage(String.format("***Jumped to to track #%d\n***/%s by %s\n%s", Integer.parseInt(wordArgs[1]), currentTrack.getInfo().title, currentTrack.getInfo().author, currentTrack.getInfo().uri )).queue();
+                            }
+
+
+                        }else {
+
+
+                            event.getChannel().sendMessage("Integer Value for track too large!").queue();
+                        }
+
+                    }else {
+
+                        event.getChannel().sendMessage("Second argument has to be a numeric").queue();
+                    }
+
+                }else {
+
+                    event.getChannel().sendMessage("Incorrect Usage!! Example '!track <number in playlist>'").queue();
+                }
+                break;
+            case "!sleep":
+
+                if(!event.getMember().getVoiceState().inAudioChannel()){
+
+
+                    event.getChannel().sendMessage("Must be in the music voice channel to listen to and issue music commands").queue();
+                }
 
                 final AudioManager audioManager = event.getGuild().getAudioManager();
-                final VoiceChannel voiceChannel = (VoiceChannel) event.getMember().getVoiceState().getChannel();
+
+                audioManager.closeAudioConnection();
+
+                event.getChannel().sendMessage("I have left the audio channel to sleep :sleeping:").queue();
+                break;
 
 
-                audioManager.openAudioConnection(voiceChannel);
-
-
-                String link = "";
-
-
-                for(int i = 1; i < wordArgs.length; ++i){
-
-                    link += wordArgs[i] + " ";
-
-
-                }
-
-
-                if (!isURL(link)){
-
-                    link = "ytsearch:" + link + " audio";
-                }
-
-                SongPlayer.getInstance().playSong(event.getGuild().getTextChannelById("TEXT CHANNEL ID"));
-                SongPlayer.getInstance().loadToPlay(event.getGuild().getTextChannelById("TEXT CHANNEL ID"), link );
-
-
-            }
+            default:
+                break;
 
 
 
-        }else {
-
-
-            return;
         }
-
 
 
 
@@ -92,12 +169,25 @@ public class PongListener extends ListenerAdapter {
 
         try {
 
-            new URI(link);
+            new URL(link).toURI();
             return true;
 
-        } catch (URISyntaxException e) {
+        } catch (Exception e){
+
             return false;
         }
+    }
+
+    public static boolean isNumeric(String strNum) {
+        if (strNum == null) {
+            return false;
+        }
+        try {
+            int d = Integer.parseInt(strNum);
+        } catch (NumberFormatException nfe) {
+            return false;
+        }
+        return true;
     }
 
     @Override
@@ -113,71 +203,122 @@ public class PongListener extends ListenerAdapter {
         }else {
 
 
-            switch (event.getName()){
+
+            List<TextChannel> musicCmdChannels = event.getGuild().getTextChannelsByName("music-commands", true);
 
 
-                case "skipsong":
-                    SongPlayer.getInstance().skipSong(event.getGuild().getTextChannelById("TEXT ID"));
-                    SongPlayer.getInstance().playSong(event.getGuild().getTextChannelById("TEXT ID"));
-                    AudioTrack currentTrack = SongPlayer.getInstance().getCurrentTrack(event.getGuild().getTextChannelById("TEXT ID"));
-                    if(currentTrack != null){
-                        event.reply("Song has been skipped!\nNow playing: "+ currentTrack.getInfo().title + " by: " + currentTrack.getInfo().author ).queue();
-                    }   else {
-                        event.reply("Song has been skipped!").queue();
-                    }
+            if(musicCmdChannels.size() != 1){
 
-                    break;
-                case "pausesong":
-                    SongPlayer.getInstance().pauseSong(event.getGuild().getTextChannelById("TEXT ID"));
-                    event.reply("Song has been paused").queue();
-                    break;
-                case "playsong":
-                    SongPlayer.getInstance().playSong(event.getGuild().getTextChannelById("TEXT ID"));
-                    event.reply("Song has resumed playing").queue();
-                    break;
-                case "currentsong":
-                     currentTrack = SongPlayer.getInstance().getCurrentTrack(event.getGuild().getTextChannelById("TEXT ID"));
 
-                    if(currentTrack != null){
+                event.getChannel().sendMessage("Commands for music must come from a single channel called '#music-commands'").queue();
+            }else {
 
-                        event.reply(String.format("**Current Track**\n%s\nby:**%s", currentTrack.getInfo().title, currentTrack.getInfo().author )).queue();
-                    }else {
 
-                        event.reply("No song is currently playing").queue();
-                    }
 
-                    break;
-                case "listplaylist":
-                    List<AudioTrack> tracks = SongPlayer.getInstance().getAllTracks(event.getGuild().getTextChannelById("TEXT ID"));
-                    String msg = "";
-                    int count = 0;
 
-                    if(tracks.size() != 0){
 
-                        for(AudioTrack audioTrack: tracks){
+                switch (event.getName()){
 
-                            msg += String.format("%d.  %s by %s\n", count, audioTrack.getInfo().title, audioTrack.getInfo().author);
-                            count+=1;
+
+                    case "skipsong":
+                        SongPlayer.getInstance().skipSong(musicCmdChannels.get(0));
+                        SongPlayer.getInstance().playSong(musicCmdChannels.get(0));
+                        AudioTrack currentTrack = SongPlayer.getInstance().getCurrentTrack(musicCmdChannels.get(0));
+                        if(currentTrack != null){
+                            event.reply("Song has been skipped!\nNow playing: "+ currentTrack.getInfo().title + " by: " + currentTrack.getInfo().author ).queue();
+                        }   else {
+                            event.reply("Song has been skipped!").queue();
                         }
 
-                        event.reply(msg).queue();
+                        break;
+                    case "pausesong":
+                        SongPlayer.getInstance().pauseSong(musicCmdChannels.get(0));
+                        event.reply("Song has been paused").queue();
+                        break;
+                    case "playsong":
+                        SongPlayer.getInstance().playSong(musicCmdChannels.get(0));
+                        event.reply("Song has resumed playing").queue();
+                        break;
+                    case "currentsong":
+                        currentTrack = SongPlayer.getInstance().getCurrentTrack(musicCmdChannels.get(0));
+
+                        if(currentTrack != null){
+
+                            event.reply(String.format("**Current Track**\n%s\nby:**%s\n\n%s", currentTrack.getInfo().title, currentTrack.getInfo().author, currentTrack.getInfo().uri )).queue();
+                        }else {
+
+                            event.reply("No song is currently playing").queue();
+                        }
+
+                        break;
+                    case "listplaylist":
+                        List<AudioTrack> tracks = SongPlayer.getInstance().getAllTracks(musicCmdChannels.get(0));
+                        String msg = "";
+                        int count = 0;
+
+                        if(tracks.size() != 0){
+
+                            for(AudioTrack audioTrack: tracks){
+
+                                msg += String.format("%d.  %s by %s\n", count, audioTrack.getInfo().title, audioTrack.getInfo().author);
+                                count+=1;
+                            }
+
+                            event.reply(msg).queue();
 
 
-                    }else {
+                        }else {
 
-                        event.reply("Playlist is empty... Add songs!").queue();
-                    }
-                    break;
+                            event.reply("Playlist is empty... Add songs!").queue();
+                        }
+                        break;
+                    case "repeat":
+                        SongPlayer.getInstance().setRepeat(musicCmdChannels.get(0), true);
+                        event.reply("Reating turned on").queue();
+                        break;
+
+                    case "repeatoff":
+                        SongPlayer.getInstance().setRepeat(musicCmdChannels.get(0), false);
+                        event.reply("Repeating turned off").queue();
+                        break;
+
+                    case "clear":
+                        SongPlayer.getInstance().clearQueue(musicCmdChannels.get(0));
+                        event.reply("Music Queue has now been cleared!!").queue();
+                        break;
+                    case "shuffle":
+                        SongPlayer.getInstance().setShuffle(musicCmdChannels.get(0), true );
+                        event.reply("Shuffle turned ON").queue();
+                        break;
+                    case "offshuffle":
+                        SongPlayer.getInstance().setShuffle(musicCmdChannels.get(0), false );
+                        event.reply("Shuffle turned OFF").queue();
+                        break;
 
 
-                default:
-                    event.reply("Invalid command").queue();
+                        
+
+
+                    default:
+                        event.reply("Invalid command").queue();
+
+
+
+
+
+                }
+
 
 
 
 
 
             }
+
+
+
+
+
 
 
 
